tests/NormalTests/paczka1/fuzzy1/57149230.err
Error in line 7: Q9rkws0H S541 32,0
Error in line 32: iMcMNpb S328 14,1
Error in line 37: S541 A375 88,8
